fix-images and styles on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,7 +1,8 @@
 // my variables
 
-$small-break: 600px;
-
+$small-break: 700px;
+$mid-break: 900px;
+$large-break: 1100px;
 body {
 	background:#f5f5f5 !important;
 }
@@ -28,7 +29,7 @@ index-page-content{
 }
 .head-wrapper,.foot-wrapper{
 	margin:auto;
-	max-width:60% !important;
+	max-width:60%;
 	
 }
 .contact-form{
@@ -56,7 +57,7 @@ index-page-content{
 	 margin:auto;
 	text-align: center;
 
-	width:32%;
+	width:276px;
 	a{
 		color:black;
 	} 
@@ -206,8 +207,65 @@ form textarea{
     text-decoration: line-through;
 
 }
-@media only screen and (max-width: $small-break) {
+
+@media only screen and (max-width: $large-break) {
+.wrapper{
+	max-width: 75% !important;
+}
+	
+.container{
+	h2{
+		width:75%;
+	}
+}
+}
+@media only screen and (max-width: $mid-break) {
 .wrapper{
 	max-width: 80% !important;
+}
+	.head-wrapper,.foot-wrapper{
+	max-width: 75%;
+}
+.container{
+	h2{
+		width:85%;
+	}
+}
+}
+
+
+@media only screen and (max-width: $small-break) {
+.wrapper{
+	max-width: 90% !important;
+}
+.head-wrapper,.foot-wrapper{
+	max-width: 90%;
+}
+ul.social-media-list,ul.footer-site-name,ul.footer-site-connect {
+	display: flex;
+	margin:auto;
+	text-align: center;
+	width:250px;
+	a{
+		color:black;
+	} 
+	a:hover{
+		color:darkgray;
+	}
+	li{		
+		margin: auto;
+		text-align: center;
+	 }
+}
+ul.social-media-list{
+
+	li{		margin: auto;
+
+		background: white;
+		border:1px solid;
+		border-radius: 50px;
+		padding: 3px;
+		margin:3px 6px;
+	}
 }
 }
